# esp32s3-voice-command-frontend

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  README.zh-CN.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
cmake/: stm32-gcc-toolchain.cmake
components/espnow_bridge/: CMakeLists.txt  espnow_bridge.c  idf_component.yml
components/espnow_bridge/include/: espnow_bridge.h
components/hardware_driver/: CMakeLists.txt  Kconfig.projbuild  esp_board_init.c  idf_component.yml
components/hardware_driver/boards/: bsp_board.c  bsp_display.c
components/hardware_driver/boards/include/: bsp_board.h  bsp_display.h  esp_custom_board.h
components/hardware_driver/include/: esp_board_init.h
components/lvgl_ui/: CMakeLists.txt
components/lvgl_ui/include/: display_base.h  lcd_display.h  lvgl_display.h  lvgl_port.h  speech_ui.h  ui_config.h
components/lvgl_ui/src/: display_base.c  lcd_display.c  lvgl_display.c  lvgl_port.c  speech_ui.c
components/perf_tester/: idf_component.yml  mn_perf_tester.c
docs/: architecture.md  display_init_lichuang_dev_step_by_step.md  integration.md  protocol.md  stm32_unified_ide_setup.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  speech_commands_action.c
main/include/: speech_commands_action.h
tools/: stm32_unified_env.ps1
tools/esp8266_esnow_slave_bridge/: README.md  esp8266_esnow_slave_bridge.ino
